# py-obsidian-actions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
src/obsidian_actions/: __init__.py  obsidian.py  xcall.py
src/tests/: __init__.py
