[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# linting
[tool.ruff]
line-length = 99
select = [
    "F", # flake8
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "C90", # mccabe complexity
    "D", # pydocstyle
    "N", # pep8-naming
    "B", # flake8-bugbear
]
ignore = ["D203","D212"]
src = ["src"]
