[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# linting
[tool.ruff]
line-length = 99
select = [
    "F", # flake8
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "C90", # mccabe complexity
    "D", # pydocstyle
    "N", # pep8-naming
    "B", # flake8-bugbear
]
ignore = [
    "D203", # 1 blank line required before class docstring.
    "D212", # multi-line docstring summary should start at first line.
    "E501", # line too long
]
src = ["src"]
