[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:src/obsidian_actions/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = py-obsidian-actions
version = attr: obsidian_actions.__version__
author = Michiel Cottaar
author_email = MichielCottaar@pm.me
description = python interface to the obsidian-actions-uri (https://github.com/czottmann/obsidian-actions-uri)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichielCottaar/py-obsidian-actions
project_urls =
    Bug Tracker = https://github.com/MichielCottaar/py-obsidian-actions/-/issues
    Documentation = https://open.win.ox.ac.uk/pages/MichielCottaar/py-obsidian-actions
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =

[options.packages.find]
where = src
exclude =
    tests*
    *.egg-info
